-
Bug
-
Resolution: Done
-
P2: Important
-
6.1
-
None
-
9ddc133fe3a59f9cd9bb682daa86b8d5e2335fe2 (qt/qtquick3d/dev) 99e4087de936b3f9913bb891db3e95948628fd45 (qt/qtquick3d/6.1)
-
Qt Quick 3D - 2021 Week 11/12
- resulted from
-
QTBUG-88320 Dynamically creating a View3D second time crashes
-
- Closed
-
For Gerrit Dashboard: QTBUG-91888 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
339131,8 | rhi: Make it possible to clone a QRhiRenderPassDescriptor | dev | qt/qtbase | Status: MERGED | +2 | 0 |
339143,7 | Use new renderpass descriptor cloning to avoid pointers-in-hashmap-key problems | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
339736,2 | rhi: Make it possible to clone a QRhiRenderPassDescriptor | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
340304,2 | Use new renderpass descriptor cloning to avoid pointers-in-hashmap-key problems | 6.1 | qt/qtquick3d | Status: MERGED | +2 | 0 |